*********

* ``bzr switch -b`` can now create branches that are located using directory
  services such as ``lp:``, even when the branch name doesn't contain a
  '/'.  (Neil Martinsen-Burrell, #495263)

* ``bzr unshelve`` has improved messages about what it is doing.
  (Neil Martinsen-Burrell, #496917)

* Listen to the SIGWINCH signal to update the terminal width.
  (Vincent Ladeuil, #316357)

Improvements
************

* Transport network activity indicator is shown more of the time when
  Bazaar is doing network IO.
  (Martin Pool)

Documentation
*************

API Changes
***********

* Many test features were renamed from ``FooFeature`` to ``foo_feature``
  to be consistent with instances being lower case and classes being
  CamelCase. For the features that were more likely to be used, we added a
  deprecation thunk, but not all. (John Arbash Meinel)

Internals
*********

* New helper osutils.UnicodeOrBytesToBytesWriter which encodes unicode
  objects but passes str objects straight through. This is used for
  selftest but may be useful for diff and other operations that generate
  mixed output. (Robert Collins)

Testing
*******

* ``bzrlib.tests.TestCase`` now subclasses ``testtools.testcase.TestCase``.
  This permits features in testtools such as getUniqueInteger and
  getUniqueString to be used. Because of this, testtools version 0.9.2 or
  newer is now a dependency to run bzr selftest. Running with versions of
  testtools less than 0.9.2 will cause bzr to error while loading the test
  suite. (Robert Collins)

* The test progress bar no longer distinguishes tests that 'errored' from
  tests that 'failed' - they're all just failures.
  (Martin Pool)

bzr 2.0.4 (not released yet)
############################

:Codename: template
:2.0.4: ???

Compatibility Breaks
********************

New Features
************

Bug Fixes
*********

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******

